--- a/client/package.json
+++ b/client/package.json
@@ -28,6 +28,7 @@
     "react-toastify": "^9.0.8",
     "react-tsparticles": "^2.2.2",
     "redux": "^4.2.0",
+    "redux-thunk": "^2.4.1",
     "socket.io-client": "^4.5.1",
     "stream-http": "^3.2.0",
     "styled-components": "^5.3.5",
