--- a/client/package.json
+++ b/client/package.json
@@ -33,7 +33,8 @@
     "stream-http": "^3.2.0",
     "styled-components": "^5.3.5",
     "timeago.js": "^4.0.2",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "web3.storage": "^4.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
