--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "os": "^0.1.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
+    "react-circular-progressbar": "^2.1.0",
     "react-create-context": "^1.0.2",
     "react-dom": "^18.2.0",
     "react-google-login": "^5.2.2",
