--- a/client/package.json
+++ b/client/package.json
@@ -11,12 +11,13 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
+    "bootstrap": "^4.0.0-alpha.6",
     "framer-motion": "^7.0.0",
     "moralis": "^1.11.0",
     "os": "^0.1.2",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.5.0",
-    "react-circular-progressbar": "^2.1.0",
+    "react-bootstrap": "^1.3.0",
+
     "react-create-context": "^1.0.2",
     "react-dom": "^18.2.0",
     "react-google-login": "^5.2.2",
@@ -34,6 +35,7 @@
     "stream-http": "^3.2.0",
     "styled-components": "^5.3.5",
     "timeago.js": "^4.0.2",
+    "uuid": "^8.3.0",
     "web-vitals": "^2.1.4",
     "web3.storage": "^4.4.0"
   },
