--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@blackbox-vision/react-particles": "^1.2.0",
+    "@coreui/react": "^4.3.1",
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
     "@mui/material": "^5.10.1",
@@ -17,7 +18,6 @@
     "os": "^0.1.2",
     "react": "^18.2.0",
     "react-bootstrap": "^1.3.0",
-
     "react-create-context": "^1.0.2",
     "react-dom": "^18.2.0",
     "react-google-login": "^5.2.2",
